--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -53,7 +53,7 @@
                     <StackPanel Orientation="Vertical">
                         <StackPanel Orientation="Horizontal">
                             <Label>Total films:</Label>
-                            <Label x:Name="filmsTotalLabel" Content="{Binding TotalFilmsWatched}"/>
+                            <Label x:Name="filmsTotalLabel" Content="{Binding TotalFilmsWatched}" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
                             <Label>Average rating per film:</Label>
@@ -82,7 +82,7 @@
             <DockPanel LastChildFill="True" DockPanel.Dock="Left">
                 <StackPanel x:Name="leftPanel"  DockPanel.Dock="Top" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top">
 
-                    <!--Quick actions border-->
+                    <!--File actions border-->
                     <GroupBox x:Name="groupBoxFileActions"  HorizontalAlignment="Left">
                         <GroupBox.Header>File actions</GroupBox.Header>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -152,36 +152,50 @@
                             </Button>
                         </StackPanel>
                     </GroupBox>
-                    <GroupBox x:Name="groupBoxQuickActions"  HorizontalAlignment="Left">
-                        <GroupBox.Header>Quick actions</GroupBox.Header>
-                        <StackPanel Orientation="Horizontal">
-                            <Button x:Name="buttonNewFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFilmRecord">
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\ButtonIcons\addrecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
-                                    <TextBlock Text="New film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                </StackPanel>
-                            </Button>
-                            <Button x:Name="buttonDeleteFilmRecord"  HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="False" Click="DeleteFilmRecord">
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\ButtonIcons\deleterecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
-                                    <TextBlock Text="Delete film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                </StackPanel>
-                            </Button>
-                            <Button x:Name="buttonClearAll"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="ClearAll">
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Source="\Assets\ButtonIcons\clear2.png" Stretch="None"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
-                                    <TextBlock Text="Clear all" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                </StackPanel>
-                            </Button>
-                            <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
-                            <Button x:Name="buttonSelectLast"  HorizontalAlignment="Left"  VerticalAlignment="Top" Click="SelectLastButton">
-                                <StackPanel Orientation="Horizontal">
-                                    <Image Source="/Assets/ButtonIcons/selectLast2.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
-                                    <TextBlock Text="Go to last" HorizontalAlignment="Left" VerticalAlignment="Center" />
-                                </StackPanel>
-                            </Button>
-                        </StackPanel>
-                    </GroupBox>
+
+                    <!--Quick actions border-->
+                    <DockPanel >
+                        <GroupBox x:Name="groupBoxQuickActions"  HorizontalAlignment="Left">
+                            <GroupBox.Header>Quick actions</GroupBox.Header>
+                            <StackPanel Orientation="Horizontal">
+                                <Button x:Name="buttonNewFilmRecord"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="NewFilmRecord">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="\Assets\ButtonIcons\addrecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                        <TextBlock Text="New film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                                <Button x:Name="buttonDeleteFilmRecord"  HorizontalAlignment="Left" VerticalAlignment="Top" UseLayoutRounding="False" Click="DeleteFilmRecord">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="\Assets\ButtonIcons\deleterecord.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                        <TextBlock Text="Delete film record" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                                <Button x:Name="buttonClearAll"  HorizontalAlignment="Left"  VerticalAlignment="Top" UseLayoutRounding="False" Click="ClearAll">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="\Assets\ButtonIcons\clear2.png" Stretch="None"  RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                        <TextBlock Text="Clear all" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                                <Separator Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" />
+                                <Button x:Name="buttonSelectLast"  HorizontalAlignment="Left"  VerticalAlignment="Top" Click="SelectLastButton">
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/Assets/ButtonIcons/selectLast2.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" />
+                                        <TextBlock Text="Go to last" HorizontalAlignment="Left" VerticalAlignment="Center" />
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                        </GroupBox>
+                        
+                        <!--Search border-->
+                        <GroupBox HorizontalAlignment="Right">
+                            <GroupBox.Header>Search</GroupBox.Header>
+                            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                <Image Source="/Assets/ButtonIcons/search.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+                                <TextBox Text="Search" HorizontalAlignment="Center" VerticalAlignment="Center" Width="200" />
+                            </StackPanel>
+                        </GroupBox>
+                    </DockPanel>
                 </StackPanel>
 
                 <!--Watched films table border-->
@@ -200,7 +214,7 @@ ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalScrollBarVisibility=
         <!--Version bottom panel-->
         <DockPanel Background="#FFAFAFAF" DockPanel.Dock="Bottom" VerticalAlignment="Bottom">
             <StackPanel x:Name="PanelVersion" Orientation="Horizontal" DockPanel.Dock="Left" HorizontalAlignment="Left" VerticalAlignment="Top">
-                <Label x:Name="LabelVersion" Content="{Binding ProgramVersion}"/>
+                <Label x:Name="LabelVersion" Content="{Binding ProgramVersion}" />
                 <Image x:Name="ImageNewVersion" Source="\Assets\ButtonIcons\newVersion.png" Stretch="None" RenderOptions.BitmapScalingMode="NearestNeighbor" RenderOptions.EdgeMode="Aliased" Visibility="Collapsed" Margin="0,0,5,0" />
                 <TextBlock x:Name="TextBlockNewVersion" Visibility="Collapsed" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,5,0"></TextBlock>
             </StackPanel>
