wrong release year colors cell, but scrolling the datagrid is glitchy

--- a/Source/Views/MainWindow.xaml
+++ b/Source/Views/MainWindow.xaml
@@ -223,6 +223,7 @@
                     <Grid x:Name="grid">
                         <DataGrid x:Name="filmsGrid" AutoGenerateColumns="False" CanUserAddRows="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" ColumnWidth="Auto" CanUserDeleteRows="False"
 ScrollViewer.CanContentScroll="True"
+                                  ScrollViewer.ScrollChanged="filmsGrid_ScrollChanged"
 ScrollViewer.VerticalScrollBarVisibility="Auto"
 ScrollViewer.HorizontalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" AlternatingRowBackground="#FFD6E2FF" AlternationCount="4" CanUserResizeRows="False" SelectionUnit="CellOrRowHeader" />
                     </Grid>
